# computergraphics

./: .gitignore  README.md  kubus.txt
opengl_1/Code/: OpenGL_transformations.pro  main.cpp  mainview.cpp  mainview.h  mainwindow.ui  model.cpp  model.h  sceneobject.cpp  sceneobject.h  vertex.cpp  vertex.h
opengl_2/: README  vertshader 2.glsl
opengl_2/Code/: .swp  OpenGL_transformations.pro  mainview.cpp  mainview.h  mainwindow.ui  resources.qrc  sceneobject.cpp  sceneobject.h  texture.cpp  texture.h  vertex.cpp  vertex.h
opengl_3/Code/: OpenGL_transformations.pro  mainview.cpp  mainview.h  mainwindow.cpp  mainwindow.ui  model.cpp  resources.qrc  sceneobject.cpp  sceneobject.h  user_input.cpp  vertex.cpp  vertex.h
opengl_intro/Code/: mainview.cpp  mainview.h  vertex.cpp  vertex.h
raytrace_1/: README
raytrace_1/Code/: raytracer.cpp  scene.cpp
raytrace_1/Scenes/: scene03.json  scene04.json  scene05.json  scene06.json
raytrace_2/: CMakeCache.txt  CMakeLists.txt  DEMO.md  cmake_install.cmake  ray.cbp
raytrace_2/Code/: BoundingBox.cpp  BoundingBox.h  KdTree.cpp  KdTree.h  image.cpp  image.h  main.cpp  material.h  object.cpp  object.h  raytracer.cpp  scene.cpp  scene.h
raytrace_2/Code/shapes/: MeshTriangle.cpp  MeshTriangle.h  MirrorPlane.cpp  MirrorPlane.h  cone.cpp  cylinder.cpp  cylinder.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
raytrace_2/Scenes/: scene01-texture-ss-reflect-lights-shadows.json  scene01.json  scene03.json  scene04.json  scene05.json  scene06.json  scene07.json  scene08.json  scene08_big.json  scene08_big_1600.json
(+35 files in other folders)
